--- a/requirements.txt
+++ b/requirements.txt
@@ -4,11 +4,14 @@ certifi==2018.11.29
 chardet==3.0.4
 Django==2.1.4
 docutils==0.14
+filelock==3.0.10
 idna==2.8
 imagesize==1.1.0
 Jinja2==2.10
 MarkupSafe==1.1.0
 packaging==18.0
+pluggy==0.8.0
+py==1.7.0
 Pygments==2.3.1
 pyparsing==2.3.0
 pytz==2018.7
@@ -17,4 +20,7 @@ six==1.12.0
 snowballstemmer==1.2.1
 Sphinx==1.8.2
 sphinxcontrib-websupport==1.1.0
+toml==0.10.0
+tox==3.6.0
 urllib3==1.24.1
+virtualenv==16.1.0
