--- a/.travis.yml
+++ b/.travis.yml
@@ -16,6 +16,10 @@ matrix:
     - { python: 3.7, env: TOXENV=docs }
     - { python: 3.7, env: TOXENV=flake8 }
 
+      # https://github.com/travis-ci/travis-ci/issues/9815
+      dist: xenial
+      sudo: yes
+
   # we allow failures for now:
   allow_failures:
       - env: TOXENV=py37-2.1
