--- a/.travis.yml
+++ b/.travis.yml
@@ -12,12 +12,9 @@ script: tox
 
 matrix:
   include:
-    - { python: 3.7, env: TOXENV=py37-2.1 }
-    - { python: 3.7, env: TOXENV=docs }
-    - { python: 3.7, env: TOXENV=flake8 }
-
-    # https://github.com/travis-ci/travis-ci/issues/9815
-    sudo: yes
+    - { python: 3.7-dev, env: TOXENV=py37-2.1 }
+    - { python: 3.7-dev, env: TOXENV=docs }
+    - { python: 3.7-dev, env: TOXENV=flake8 }
 
   # we allow failures for now:
   allow_failures:
