--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -1,4 +1,4 @@
 include LICENSE
-include README.md
-recursive-include django_typeahead/static *
-recursive-include django_typeahead/templates *
+include README.rst
+recursive-include django_typeahead *
+global-exclude *.pyc
