Add additional setup for documentation

--- a/tox.ini
+++ b/tox.ini
@@ -15,7 +15,7 @@ deps =
     2.1: Django==2.1
 
 [testenv:docs]
-basepython = python
+basepython = python3.7
 changedir = docs
 deps =
     Django==2.1
